--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,5 @@
     <color name="myColor">#2E4053</color>
     <color name="Green">#FF76CD10</color>
     <color name="button">#1859ed</color>
-    
+    <color name="Grey">#A9A9A9</color>
 </resources>
