--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,8 @@
         android:layout_height="match_parent"
         android:scrollbars="vertical"
         android:id="@+id/mListRv"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/recycle_item"/>
     <com.melnykov.fab.FloatingActionButton
         android:id="@+id/mAddBtn"
         android:layout_width="wrap_content"
